# exotica_nlopt_solver

./: CMakeLists.txt  README.md  exotica_plugins.xml  package.xml
.github/workflows/: industrial_ci_action.yml
include/exotica_nlopt_solver/: nlopt-util.hpp  nlopt_solver.h
init/: NLoptBoundedEndPoseSolver.in  NLoptEndPoseSolver.in  NLoptMotionSolver.in  NLoptUnconstrainedEndPoseSolver.in
launch/: python_nlopt_ik_bounded.launch  python_nlopt_ik_constrained.launch  python_nlopt_ik_unconstrained.launch  python_nlopt_ik_velocity_constrained.launch
resources/: nlopt_ik_bounded.xml  nlopt_ik_constrained.xml  nlopt_ik_unconstrained.xml  nlopt_ik_velocity_constrained.xml
scripts/: example_nlopt_ik_bounded  example_nlopt_ik_constrained  example_nlopt_ik_unconstrained  example_nlopt_ik_velocity_constrained
src/: exotica_nlopt_solver.cpp
