<?xml version="1.0"?>
<package format="2">
  <name>exotica_nlopt_solver</name>
  <version>1.0.0</version>
  <description>EXOTica solvers based on NLopt.</description>

  <maintainer email="opensource@wolfgangmerkt.com">Wolfgang Merkt</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="repository">https://github.com/wxmerkt/exotica_nlopt_solver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>exotica_core</build_depend>
  <build_export_depend>exotica_core</build_export_depend>
  <exec_depend>exotica_core</exec_depend>

  <build_depend>libnlopt-dev</build_depend>
  <build_export_depend>libnlopt-dev</build_export_depend>
  <exec_depend>libnlopt0</exec_depend>

  <export>
    <exotica_core plugin="${prefix}/exotica_plugins.xml" />
  </export>
</package>
